<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".DetailedGhActivity">

    <TextView
        android:id="@+id/gh_name"
        android:layout_weight="1"
        android:text="deneme"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorForeground">
    </TextView>



    <GridLayout
        android:layout_weight="0"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:background="@color/colorForeground"
            android:text="@string/lastTemp"
            android:layout_margin="5dp"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp">
        </TextView>

        <TextView
            android:id="@+id/gh_curr_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="fill"
            android:background="@color/colorForeground"
            android:gravity="center"
            android:text="30^C"
            android:textSize="30sp">
        </TextView>
        <TextView
            android:background="@color/colorForeground"
            android:text="@string/wantTemp"
            android:layout_margin="5dp"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp">
        </TextView>

        <TextView
            android:id="@+id/gh_wanted_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="fill"
            android:background="@color/colorForeground"
            android:gravity="center"
            android:text="30^C"
            android:textSize="30sp">
        </TextView>

        <TextView
            android:background="@color/colorForeground"
            android:text="@string/diffTemp"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp">
        </TextView>
        <TextView
            android:id="@+id/gh_temp_space"
            android:background="@color/colorForeground"
            android:gravity="center"
            android:text="5^C"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp">
        </TextView>

    </GridLayout>


    <LinearLayout
        android:layout_weight="0"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/gh_change_temp_btn"
            android:layout_margin="5dp"
            android:background="@color/colorForeground"
            android:text="@string/chWantTemp"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp">
        </TextView>
        <TextView
            android:id="@+id/gh_change_space_btn"
            android:layout_margin="5dp"
            android:background="@color/colorForeground"
            android:text="@string/chDiffTemp"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_weight="150"
        android:background="@drawable/sera1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <TextView
        android:id="@+id/gh_save"
        android:layout_weight="1"
        android:background="@color/colorForeground"
        android:layout_margin="15dp"
        android:text="@string/save"
        android:gravity="center"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp">

    </TextView>
</LinearLayout>